@@ -59,7 +59,9 @@ class IO::Handle {
   
   method getc : int () { die "Not implemented"; }
   
-  method print : int ($string : string) { die "Not implemented"; }
+  method print : int ($string : string) {
+    return $self->write($string);
+  }
   
   method say : int ($string : string) {
     my $status1 = $self->print($string);
@@ -86,8 +88,7 @@ class IO::Handle {
     my $old_autoflush = $self->autoflush;
     
     # Restores the autoflush field at the end of the scope.
-    my $handle = $self;
-    my $scope_guard = Scope::Guard->new([has handle : IO::Handle = $handle, has old_autoflush : int = $old_autoflush] method : void () {
+    my $scope_guard = Scope::Guard->new([has handle : IO::Handle = $self, has old_autoflush : int = $old_autoflush] method : void () {
       my $handle = $self->{handle};
       my $old_autoflush = $self->{old_autoflush};
       
@@ -162,4 +163,55 @@ class IO::Handle {
   method write : int ($string : string, $length : int = -1, $offset : int = 0) { die "Not implemented"; }
   
   method read : int ($string : mutable string, $length : int = -1, $offset : int = 0) { die "Not implemented"; }
+  
+  method syswrite : int ($string : string, $length : int = -1, $offset : int = 0) {
+    
+    unless ($string) {
+      die "The \$string must be defined.";
+    }
+    
+    unless ($offset >= 0) {
+      die "The \$offset must be greater than or equal to 0.";
+    }
+    
+    my $string_length = length $string;
+    
+    if ($length < 0) {
+      $length = $string_length - $offset;
+    }
+    
+    unless ($offset + $length <= $string_length) {
+      die "The \$offset + \$length must be lower than or equal to the length of the \$string.";
+    }
+    
+    my $fh = $self->fileno;
+    
+    return Sys::IO->write($fh, 1, $length);
+  }
+  
+  method sysread : int ($string : mutable string, $length : int = -1, $offset : int = 0) {
+    
+    unless ($string) {
+      die "The \$string must be defined.";
+    }
+    
+    unless ($offset >= 0) {
+      die "The \$offset must be greater than or equal to 0.";
+    }
+    
+    my $string_length = length $string;
+    
+    if ($length < 0) {
+      $length = $string_length - $offset;
+    }
+    
+    unless ($offset + $length <= $string_length) {
+      die "The \$offset + \$length must be lower than or equal to the length of the \$string.";
+    }
+    
+    my $fh = $self->fileno;
+    
+    return Sys::IO->read($fh, 1, $length);
+  }
+  
 }
